--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,19 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "register-service-worker": "^1.5.2",
-    "vue-raven": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "popper.js": "^1.16.1",
+    "register-service-worker": "^1.5.2",
     "vue": "^2.6.11",
+    "vue-raven": "^1.0.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
