added pennies and updated docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,11 +6,17 @@ ENV PYTHONFAULTHANDLER=1 \
     PYTHONHASHSEED=random \
     PIP_NO_CACHE_DIR=off \
     PIP_DISABLE_PIP_VERSION_CHECK=on \
-    PIP_DEFAULT_TIMEOUT=100
+    PIP_DEFAULT_TIMEOUT=100 \
+    PYTHONPATH="${PYTHONPATH}:/app/apps/pennies"
 
 # python dependencies
 COPY ./requirements.txt /
 RUN pip install -r ./requirements.txt
+
+USER root
+RUN apt-get update
+RUN apt-get install -y coinor-cbc
+
 
 # upload scripts
 COPY ./scripts/entrypoint.sh ./scripts/start.sh ./scripts/gunicorn.sh /
