--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,20 @@
-autopep8==1.5.4
+appdirs==1.4.4
+asgiref==3.2.10
+astroid==2.4.2
 attrs==20.2.0
+autopep8==1.5.4
 backcall==0.2.0
+black==20.8b1
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
+cycler==0.10.0
 decorator==4.4.2
 Django==3.1.2
 django-environ==0.4.5
 django-extensions==3.0.9
 django-redis==4.12.1
+djangorestframework==3.12.1
 flake8==3.8.4
 flake8-commas==2.0.0
 flake8-mypy==17.8.0
@@ -15,32 +22,59 @@ gevent==20.9.0
 greenlet==0.4.17
 gunicorn==20.0.4
 idna==2.10
+iniconfig==1.1.1
 ipython==7.13.0
 ipython-genutils==0.2.0
+isort==5.6.4
 jedi==0.17.2
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+matplotlib==3.3.3
 mccabe==0.6.1
 mypy==0.782
+mypy-extensions==0.4.3
+nose==1.3.7
+numpy==1.19.4
+packaging==20.7
+pandas==1.1.4
 parso==0.7.0
+pathspec==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
+pluggy==0.13.1
+ply==3.11
 prompt-toolkit==3.0.7
 psycopg2-binary==2.8.6
 ptyprocess==0.6.0
+py==1.9.0
 pycodestyle==2.6.0
+pydantic==1.7.3
 pyflakes==2.2.0
 Pygments==2.7.1
+pylint==2.6.0
+Pyomo==5.7.1
+pyparsing==2.4.7
+pytest==6.1.2
+python-dateutil==2.8.1
 pytz==2020.1
+PyUtilib==6.0.0
+raven==6.9.0
 redis==3.5.3
+regex==2020.11.13
 requests==2.24.0
 rope==0.17.0
+scipy==1.5.4
 simplegeneric==0.8.1
 six==1.15.0
+sqlparse==0.4.1
+toml==0.10.2
 traitlets==5.0.4
 typed-ast==1.4.1
+typing-extensions==3.7.4.3
 urllib3==1.25.10
 wcwidth==0.2.5
 Werkzeug==1.0.1
-raven==6.9.0
-
-djangorestframework==3.12.1
+wrapt==1.12.1
+zope.event==4.5.0
+zope.interface==5.2.0
