--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-toastification": "^1.7.8"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
