--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -41,16 +41,11 @@ http {
     }
 
     # backend urls
-    location ~ ^/(admin|api) {
+    location ~ ^/(admin|api|staticfiles|media) {
       proxy_redirect off;
       proxy_pass http://backend;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
-    }
-
-    # backend static
-    location ~ ^/(staticfiles|media)/(.*)$ {
-      alias /$1/$2;
     }
   }
 }
