--- a/nginx/frontend.prod.conf
+++ b/nginx/frontend.prod.conf
@@ -84,12 +84,12 @@ server {
 
         }
 
-        location /api/ {
-            proxy_pass $upstreambackend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+       # backend urls
+       location ~ ^/(admin|api|staticfiles|media) {
+           proxy_redirect off;
+           proxy_pass $upstreambackend;
+           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+           proxy_set_header Host $http_host;
         }
 
         # Used by Lets Encrypt
