--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/pwa": "^3.0.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
+    "vue-chartjs": "^3.5.1",
     "vue-toastification": "^1.7.8"
   },
   "devDependencies": {
