--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "vue-chartjs": "^3.5.1",
-    "vue-toastification": "^1.7.8"
+    "vue-toastification": "^1.7.8",
+    "vue-typed-js": "^0.1.2",
+    "vue-typer": "^1.2.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
