--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,13 @@
 # Django
 DEBUG=True
 SECRET_KEY=SECRET_KEY
+DJANGO_HASHID_FIELD_SALT=DIFFERENT_FROM_SECRET_KEY
 
 DOMAIN=http://localhost:8000
 ALLOWED_HOSTS=*
 
-# Email settings, defaults to 1025 and mailhog
-#EMAIL_PORT=25
-#EMAIL_HOST=localhost
+# Email settings
+SENDINBLUE_API_KEY=GET_FROM_SENDINBLUE-COM
 
 # PostgreSQL
 POSTGRES_DB=two-cents
@@ -23,6 +23,14 @@ SENTRY_PUBLIC_DSN=
 VUE_APP_SENTRY_PUBLIC_DSN=
 
 
+# Firebase -- given values are for two-cents-canada-dev so NBD. 
+FIREBASE_API_KEY=AIzaSyDXd2TsrIQ2wiwiDsS_Z3dTtakdVH8EJEE
+FIREBASE_AUTH_DOMAIN=two-cents-canada-dev.firebaseapp.com
+FIREBASE_PROJECT_ID=two-cents-canada-dev
+FIREBASE_STORAGE_BUCKET=two-cents-canada-dev.appspot.com
+FIREBASE_MESSENGER_SENDER_ID=479438313062
+FIREBASE_APP_ID=1:479438313062:web:fcc309df61d45908aa3fa7
+FIREBASE_MEASUREMENT_ID=G-N7E647R6C5
 
 
 
