--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.4.2",
     "nuxt": "^2.14.6",
+    "nuxt-user-agent": "^1.2.2",
     "vue-chartjs": "^3.5.1",
     "vue-toastification": "^1.7.8",
     "vue-typer": "^1.2.0"
