--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "jest": "^26.5.0",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "sass": "~1.32.12"
   }
 }
