--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/firebase": "^7.5.0",
     "@nuxtjs/pwa": "^3.0.2",
+    "@nuxtjs/sentry": "^5.1.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "firebase": "^8.4.2",
