Added onboarding interface

--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,9 @@ POSTGRES_PASSWORD=mysecretpass
 POSTGRES_USER=postgresuser
 
 # Sentry
-SENTRY_DSN=
-SENTRY_PUBLIC_DSN=
-VUE_APP_SENTRY_PUBLIC_DSN=
+SENTRY_DSN=""
+# https://19d6ae2ddc754bf98bf2a68bf0a011f1@o871577.ingest.sentry.io/5824688
+# use actual for testing purposes if needed
 
 # Firebase
 FIREBASE_TOKEN=FIREBASE_TOKEN # get this by running `firebase login:ci`
