--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,8 @@ SOMETHING
 -----END PRIVATE KEY-----"
 FIREBASE_SA_CLIENT_EMAIL=SOME_EMAIL
 FIREBASE_SA_CLIENT_ID=SOMETHING
+
+# Stripe Integration
+STRIPE_PUBLISHABLE_KEY=pk_XX
+STRIPE_SECRET_KEY=sk_XX
+STRIPE_ACCOUNT=acct_XX
