--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,7 @@ idna==2.10
 iniconfig==1.1.1
 jedi==0.17.2
 kiwisolver==1.3.1
+mailchimp-marketing==3.0.70
 matplotlib==3.3.3
 mypy==0.782
 nose==1.3.7
@@ -57,6 +58,7 @@ scipy==1.5.4
 simplegeneric==0.8.1
 six==1.15.0
 sqlparse==0.4.1
+stripe==2.60.0
 traitlets==5.0.4
 urllib3==1.25.10
 wcwidth==0.2.5
