--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,6 +1,27 @@
 FROM node:10-alpine
 WORKDIR /app
 
+ARG NUXT_HOST
+ARG NUXT_PORT
+ARG AXIOS_BASE_URL
+ARG DOMAIN
+ARG SENTRY_DSN
+ARG STRIPE_ACCOUNT
+ARG STRIPE_TEST
+ARG STRIPE_TEST_PUBLISHABLE_KEY
+ARG STRIPE_PROD_PUBLISHABLE_KEY
+
+
+ENV NUXT_HOST=${NUXT_HOST}
+ENV NUXT_PORT=${NUXT_PORT}
+ENV AXIOS_BASE_URL=${AXIOS_BASE_URL}
+ENV DOMAIN=${DOMAIN}
+ENV SENTRY_DSN=${SENTRY_DSN}
+ENV STRIPE_ACCOUNT=${STRIPE_ACCOUNT}
+ENV STRIPE_TEST=${STRIPE_TEST}
+ENV STRIPE_TEST_PUBLISHABLE_KEY=${STRIPE_PROD_PUBLISHABLE_KEY}
+ENV STRIPE_PROD_PUBLISHABLE_KEY=${STRIPE_PROD_PUBLISHABLE_KEY}
+
 COPY ./frontend/package.json ./frontend/package-lock.json /app/
 RUN npm install
 
