Fixed frontend docker deployment issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,14 @@ services:
     env_file: .env
 
   frontend:
-    image: node:10-alpine
+    image: node:16
     command: npm run dev
     volumes:
       - ./.env:/app/.env:ro
       - ./frontend:/app
     working_dir: /app
     restart: on-failure
+    env_file: .env
 
   postgres:
     image: postgres:10-alpine
