Added published plans frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "nuxt": "^2.2.0",
+    "nuxt-helmet": "^2.0.1",
     "nuxt-user-agent": "^1.2.2",
     "vue-chartjs": "^3.5.1",
     "vue-toastification": "^1.7.8",
